Inicio de home, se avanzo refgistro, login, objetivos

--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="home.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Hola</h1>
+    <div class="flexbox">
+        <section class="list">
+          <h1>Contents</h1>
+          <ul>
+            <li>Story</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
+        </section>
+        <article class="main">
+          <h1>The Little Prince</h1>
+          <p>
+          And 
+          </p>
+        </article>
+        <section class="side">
+          <h1>About</h1>
+          <p>
+            The 
+          </p>
+        </section>
+      </div>
 </body>
 </html>
