--- a/views/registro.html
+++ b/views/registro.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registro</title>
+
     <!--CSS--> 
-    <link rel="stylesheet" type="text/css" href="/public/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" href="/css/navbar.css" type="text/css">
+
     <!--Tipografías--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,154 +17,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<style>
-    html, body{
-        margin: 0; 
-        padding: '0';
-    }
-.main{
-    background: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1648519753/Por%20Ti/fondo_registro_s5hqja.png) no-repeat center center;
-    background-size: cover;
-    height: 80%;
-    margin-top: -20px;
-}
-.fondo-login{
-    width: 40%;
-    height: 70%;
-    position: absolute;
-    z-index: 1;
-    top: 20;
-    left: 15vw;
-    background-color: white;
-    opacity: 40%;
-    font-family: 'Fredoka', sans-serif;;  
-    font-style: light;
-}
-.h2{
-    font-family: 'Poppins', sans-serif;
-    font-size: 42;
-    color: white;
-    text-align: center;
-}
-.body-text{
-    color: white;
-    font-family: 'Fredoka', sans-serif;;  
-    font-weight: 300;
-    text-align: center;
-    font-size: medium;
-}
-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #eceffc;
-    font-family: 'Fredoka', sans-serif;
-}
-input{
-width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 2px solid white;
-  background-color: none;
-}
 
-
-html {
-  height: 100%;
-}
-body {
-  margin:0;
-  padding:0;
-  font-family: sans-serif;
-  background: linear-gradient(#141e30, #243b55);
-  background: #141e30;
-}
-
-.login-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 600px;
-  padding: 40px;
-  padding-bottom: 70px;
-  transform: translate(-50%, -50%);
-  background: rgba(0,0,0,.3);
-  box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0,0,0,.6);
-  border-radius: 10px;
-}
-
-.login-box h2 {
-  margin: 0 0 30px;
-  padding: 0;
-  color: #fff;
-  text-align: center;
-}
-
-.login-box .user-box {
-  position: relative;
-}
-
-.login-box .user-box input {
-  width: 100%;
-  padding: 10px 0;
-  font-size: 16px;
-  color: #fff;
-  margin-bottom: 30px;
-  border: none;
-  border-bottom: 1px solid #fff;
-  outline: none;
-  background: transparent;
-}
-.login-box .user-box label {
-  position: absolute;
-  top:0;
-  left: 0;
-  padding: 10px 0;
-  font-size: 16px;
-  color: #fff;
-  pointer-events: none;
-  transition: .5s;
-}
-
-.login-box .user-box input:focus ~ label,
-.login-box .user-box input:valid ~ label {
-  top: -20px;
-  left: 0;
-  color: lavender;
-  font-size: 12px;
-}
-
-
-.boton{
-    text-align: center;
-    background-color: #FEDFC8;
-    color: #1B1B3C;
-    font-family: 'Poppins', sans-serif;
-    font-size: 60;
-    font-style: normal;
-    padding: 20px 40px;
-    border-radius: 40px;
-    align-self: center;
-}
-
-p{
-    text-align: center;
-    color: #FEDFC8;
-    font-size: 15;
-}
-
-a{
-    text-align: center;
-    color: lavender;
-    font-size: 15;
-}
-
-</style>
-<link type=“text/css” rel=”stylesheet” href="/public/css/login.css">
 </head>
 <header>
 
@@ -169,9 +25,24 @@ a{
 <body>
     <div class="fondo">
   <div class="main">
+
+   
+        <!--Menu-->
+        <img src="/img/Logo_Horizontal.png" id="logo-menu"></img>
+<nav id="primary_nav_wrap">
+    <ul>
+      <li class="current-menu-item"><a href="/misobjetivos">Contacto</a></li>
+      <li><a href="/login">Iniciar sesión</a>
+              <li><a href="/registro">Registrate</a></li>
+            </ul>
+          </li>
+      </li>
+    </ul>
+    </nav>
+
           <form action="/login" method="GET" class="main">
             <!--Prueba-->
-            <div class="login-box">
+            <div class="login-box" id="register-box">
                 <h2>¿Listo para hacer algo por ti hoy?<h6 class="body-text">Crea una cuenta</h6></h2>
                 <form>
 
@@ -199,7 +70,7 @@ a{
                     <input type="password" name="confirm_password" required="" id="confirm_password">
                     <label for="confirm_password">Confirmar contraseña</label>
                   </div>
-                <button class="boton" style="text-align:center; left: 30%; right: 30%; position: absolute">Registrarme</button> 
+                <button style="text-align:center; left: 30%; right: 30%; position: absolute">Registrarme</button> 
                 <br>
                 <br>
                 <br>
