--- a/views/registro.html
+++ b/views/registro.html
@@ -25,20 +25,21 @@
 <body>
     <div class="fondo">
   <div class="main">
-
-   
+      
         <!--Menu-->
-        <img src="/img/Logo_Horizontal.png" id="logo-menu"></img>
-<nav id="primary_nav_wrap">
-    <ul>
-      <li class="current-menu-item"><a href="/misobjetivos">Contacto</a></li>
-      <li><a href="/login">Iniciar sesión</a>
-              <li><a href="/registro">Registrate</a></li>
-            </ul>
-          </li>
-      </li>
-    </ul>
-    </nav>
+        <div class="nav-gradient">
+          <a href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu"></img></a>
+          <nav id="primary_nav_wrap">
+              <ul>
+                <li class="current-menu-item"><a href="/misobjetivos">Contacto</a></li>
+                <li><a href="/login">Iniciar sesión</a>
+                        <li><a href="/registro">Registrate</a></li>
+                      </ul>
+                    </li>
+                </li>
+              </ul>
+              </nav>
+          </div>
 
           <form action="/login" method="GET" class="main">
             <!--Prueba-->
