--- a/views/objetivos.html
+++ b/views/objetivos.html
@@ -23,18 +23,20 @@
 
     <body>
 
-        <!--Menu-->
-        <img src="/img/Logo_Horizontal.png" id="logo-menu"></img>
-<nav id="primary_nav_wrap">
-    <ul>
-      <li class="current-menu-item"><a href="/misobjetivos">Contacto</a></li>
-      <li><a href="/login">Iniciar sesión</a>
-              <li><a href="/registro">Registrate</a></li>
-            </ul>
-          </li>
-      </li>
-    </ul>
-    </nav>
+            <!--Menu-->
+            <div class="nav-gradient">
+            <a href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu"></img></a>
+            <nav id="primary_nav_wrap">
+                <ul>
+                  <li class="current-menu-item"><a href="/misobjetivos">Contacto</a></li>
+                  <li><a href="/login">Iniciar sesión</a>
+                          <li><a href="/registro">Registrate</a></li>
+                        </ul>
+                      </li>
+                  </li>
+                </ul>
+                </nav>
+            </div>
 
         <div class="titles">
         <h4>Elije tus objetivos</h1>
