--- a/views/objetivos.html
+++ b/views/objetivos.html
@@ -62,7 +62,7 @@
         </div>
 <br>
     </div>
-    <button href="/registro">Continuar</button>
+    <a href="/misejercicios"><button>Continuar</button></a>
 </div> <!--Termina main-->
     </body>
 
