--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <!--Nunito--> 
      <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
+      <!--Kit FontAwesome--> 
+     <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
+    </head>
 
         <!--Menu-->
         <div class="nav-gradient">
@@ -41,6 +43,7 @@
         </div>
 
 <body>
+        <!--Banner--> 
     <div class="banner">
         <img src="/img/Fondo registro.png" class="img-home">
           <div class="banner-text">
@@ -55,6 +58,8 @@
           </div>
           </div>
       
+            <!--Estrellas--> 
+
     <div class="scene">
         <script type="text/javascript">
             function stars(){
@@ -83,9 +88,11 @@
             stars()
         </script>
 
+         <!--Beneficios--> 
+
     <div class="content">
         <main>
-            <h2 class="h2-Index">Beneficios</h2>
+            <h2 style="margin-top: 50px;">Beneficios</h2>
             <h3 class="h3-Index">Una forma accesible de mejorar tu salud</h3>
             <div class="flexbox">
         <div class="img-beneficios">
@@ -111,21 +118,47 @@
         </div>
               
               </div>
+
+               <!--Reseñas--> 
              
               <h2 class="h2-Index">Reseñas</h2>
               <div class="flexbox">
-                <div class="img-beneficios">
-                    
+                <div class="img-beneficios" id="review">
+
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <h4 style="font-size: 21px; font-weight: 500; text-align: left; margin-top: 25px; margin-bottom: 35px; padding-right: 25px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti rerum deserunt obcaecati quod magnam atque.</h4>
+                  <h6>Nombre Apellido</h6>
                 </div>
                 
-                <div class="img-beneficios">
+                <div class="img-beneficios" id="review">
                    
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <h4 style="font-size: 21px; font-weight: 500; text-align: left; margin-top: 25px; margin-bottom: 35px; padding-right: 25px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti rerum deserunt obcaecati quod magnam atque.</h4>
+                  <h6>Nombre Apellido</h6>
+
                 </div>
         
-                <div class="img-beneficios">
+                <div class="img-beneficios" id="review">
                     
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <h4 style="font-size: 21px; font-weight: 500; text-align: left; margin-top: 25px; margin-bottom: 35px; padding-right: 25px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti rerum deserunt obcaecati quod magnam atque.</h4>
+                  <h6>Nombre Apellido</h6>
+
                 </div>
                 </div>
+
+                   <!--¿Quiénes somos?--> 
 
               <h2 class="h2-Index">¿Quiénes somos?</h2>
               <div class="quienes-somos-cont">
