--- a/views/index.html
+++ b/views/index.html
@@ -45,18 +45,19 @@
 <body>
         <!--Banner--> 
     <div class="banner">
-        <img src="/img/Fondo registro.png" class="img-home">
+        <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1650499717/Por%20Ti/fondo-login_kfumtl.png" class="img-home">
           <div class="banner-text">
             <div class="bigTitle">
           <h1>Mejora tu salud</h1>
           </div>
           <div class="smallTitle">
               <h2 style="text-align:left; font-weight: 300;">Contenido personalizado para tu bienestar y mejorar el área de salud que desees.</h2>
-              <button class="bannerButton">Comenzar</button> 
             </div>
         </div>
           </div>
           </div>
+
+          <div class="buttonBanner"><a href="/registro"><button>Continuar</button></a></div>
       
             <!--Estrellas--> 
 
@@ -96,6 +97,7 @@
             <h3 class="h3-Index">Una forma accesible de mejorar tu salud</h3>
             <div class="flexbox">
         <div class="img-beneficios">
+          <!--BAJAR IMG-->
             <img src="/img/ventaja1.png" class="beneficios">
             <h3 style="padding: 15px; margin-bottom: 15px;">Elige el área de salud que desees</h3>
             <br>
@@ -106,7 +108,7 @@
         
         <div class="img-beneficios">
             <img src="/img/ventaja2.png" class="beneficios">
-            <h3 style="padding: 15px; margin-bottom: 15px;">Accede a contenido para sentirte mejor</h3>
+            <h3 style="padding-left: 30px; padding-right: 30px; margin-bottom: 15px;">Contenido para sentirte mejor</h3>
             <br>
             <br>
             <br>
@@ -114,7 +116,7 @@
         
         <div class="img-beneficios">
             <img src="/img/ventaja3.png" class="beneficios">
-            <h3 style="padding: 15px; margin-bottom: 15px;">Consulta y lleva un registro de tus avances</h3>
+            <h3 style="padding: 15px; margin-bottom: 15px;">Lleva un registro de tus avances</h3>
         </div>
               
               </div>
@@ -166,7 +168,7 @@
                 <img src="/img/img-quienes-somos.png" class="quienes-somos">
             </div>
             <p style="margin-bottom: 100px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis odio odio sed eu nec. Gravida pellentesque auctor mattis eget.</p>
-        </main>
+          </main>
         <img src="/img/Hojas1.png" class="hoja1">
         <img src="/img/Hojas3.png" class="hoja2">
        </div>
