--- a/views/registro.html
+++ b/views/registro.html
@@ -41,7 +41,7 @@
               </nav>
           </div>
 
-          <form action="/login" method="GET" class="main">
+          <form action="/login" method="GET" class="main" style="padding-bottom: 400px">
             <!--Prueba-->
             <div class="login-box" id="register-box">
                 <h2>¿Listo para hacer algo por ti hoy?<h6 class="body-text">Crea una cuenta</h6></h2>
