--- a/public/css/fondo.css
+++ b/public/css/fondo.css
@@ -11,10 +11,11 @@
     top: -15px;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#111425, #3751e0);
+    background: linear-gradient(#111425, rgba(40, 37, 89));
+    box-shadow: inset 1px 1px 40px 0 rgba(0, 0, 0, 0.45);
     background-attachment: fixed;
     overflow: hidden;
-    z-index: -100;
+    z-index: -100000;
 }
 
 .scene i
