--- a/views/ejercicios.html
+++ b/views/ejercicios.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio
+    <title>Mis ejercicios
     </title>
       <!--CSS--> 
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
       <link rel="stylesheet" href="/css/ejercicios.css" type="text/css">
-  
+      <link rel="stylesheet" href="/css/ejercicios-cont.css" type="text/css">
       <!--Tipografías--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,98 +42,84 @@
         </div>
 
 <body>
+
         <!--Frase--> 
     <div class="frase-fondo">
         <div class="frase-fondo-texto">
-          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptatum aliquid eligendi neque exercitationem impedit.</h2>
+            <h2>La vida es como montar en bicicleta. Para mantener el equilibrio tienes que avanzar</h2>
           <div class="smallTitle">
-              <h2 style="text-align:left; font-weight: 300;">14 de Marzo</h2>
+              <h2 style="text-align:center; font-weight: 800; margin-top: 25px;">14 de Marzo</h2>
               </div>
             </div>
         </div>
 
         <!--Top containers-->
+        <main>
         <div class="ejercicios-top-contenedor">
 
-            <div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; background-color: rgb(51, 72, 134); color: white; padding:20px">
-                <img src="/img/ventaja3.png" style="padding-right: 15px;">
-                <h2 style="font-weight:300; font-size: 26px; margin-top: 15px;">Organizador de tareas</h2>
+            <div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
+                <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503255/Por%20Ti/ejercicios-card1_bqpyfa.svg" style="width: 100%">
             </div>
 
-            <div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; background-color: rgb(51, 72, 134); color: white; padding:20px">
-                <img src="/img/ventaja3.png" style="padding-right: 15px;">
-                <h2 style="font-weight:300; font-size: 26px; margin-top: 15px;">Organizador de tareas</h2>
-            </div>
+           <a href="/miperfil"><div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
+                <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503349/Por%20Ti/ejercicios-card2_kmad1t.svg" style="width: 100%">
+            </div></a> 
             
-            <div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; background-color: rgb(51, 72, 134); color: white; padding:20px">
-                <img src="/img/ventaja3.png" style="padding-right: 15px;">
-                <h2 style="font-weight:300; font-size: 26px; margin-top: 15px;">Organizador de tareas</h2>
+            <div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
+                <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503354/Por%20Ti/ejercicios-card3_e1yx4t.svg" style="width: 100%">
             </div>
 
         </div>
 
-         <!--Estrellas--> 
-<main>
-    <div class="scene">
-        <script type="text/javascript">
-            function stars(){
-                let count = 500;
-                let scene = document.querySelector('.scene');
-                let i = 0;
-                while(i < count){
-                    let star  = document.createElement("i");
-                    let x = Math.floor(Math.random() * window.innerWidth);
-                    let y = Math.floor(Math.random() * window.innerHeight);
-                    let duration = Math.random() * 10;
-                    let size = Math.random() * 2;
+      
+        
 
-                    star.style.left = x+'px'; 
-                    star.style.top = y+'px'; 
-                    star.style.width = 1+size+'px'; 
-                    star.style.height = 1+size+'px'; 
+      <!--Código ejercicios-->
+      <h2 style="margin-top: 100px;">Mis ejercicios</h2>
 
-                    star.style.animationDuration = 5+duration+'s';
-                    star.style.animationDelay = duration+'s';
-
-                    scene.appendChild(star);
-                    i++
-                }
-            }
-            stars()
-        </script>
-
-
-        <h2 style="margin-top: 100px;">Mis ejercicios</h2>
-
-        <div class="mis-ejercicios-contenedor">
-        <img src="/img/Vector.png">
-        <img src="/img/Vector.png">
-        <img src="/img/Vector.png">
+      <div class="ejercicios-top-contenedor">
+      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503364/Por%20Ti/ejercicios-card4_vfqu0z.svg); width:373px;"><div class="card-ejercicio-text"><h2>Imaginación guiada</h2><h6>12 min</h6>
+    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+      
+    <div class="box"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+      
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width:373px;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
     </div>
+</div>
 
-        <h2 style="margin-top: 50px;">Actividades cortas</h2>
+  <h2 style="margin-top: 100px;">Actividades cortas</h2>
 
-        <div class="mis-ejercicios-contenedor">
-        <img src="/img/vector_largo.png" style="margin-right: -51px;">
-        <img src="/img/vector_largo.png">
+  <div class="mis-ejercicios-contenedor">
+    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 50%;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503371/Por%20Ti/ejercicios-card7_qguw8x.svg);"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div>
     </div>
+</div>
+</div>
 
-    <div class="chips">
-    
-    <div class="chip-hija" style="margin-right: 51px;">
-        <a href="/misejercicios"><button><span class="fa-solid fa-heart"></span>Favoritos</button></a>
-    </div>
-    <div class="chip-hija">
-        <a href="/misejercicios"><button><span class="fa-solid fa-calendar"></span>Recientes</button></a>
-    </div>
 
-    </div>
+<div class="chips">
 
-        <h2 style="margin-top: 50px;  margin-bottom: 50px;">Contacta a un especialista</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi facere dolorum autem aliquam atque praesentium vitae, consequatur quam ipsam possimus!</p>
+<div class="chip-hija" style="margin-right: 51px;">
+  <a href="/ejerciciosfavoritos404"><button><span class="fa-solid fa-heart"></span>Favoritos</button></a>
+</div>
+<div class="chip-hija">
+  <a href="/ejerciciosrecientes404"><button><span class="fa-solid fa-calendar"></span>Recientes</button></a>
+</div>
 
-        <div class="contenedor-especialista">
-        <button style="margin-top: 50px; margin-bottom: 50px;">Ver listado</button>
-    </div>
+</div>
+
+  <h2 style="margin-top: 50px;  margin-bottom: 50px;">Contacta a un especialista</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi facere dolorum autem aliquam atque praesentium vitae, consequatur quam ipsam possimus!</p>
+
+  <div class="contenedor-especialista">
+    <a href="/listado"><button style="margin-top: 50px; margin-bottom: 50px;">Ver listado</button></a>
+</div>
+</div>
+  </div>
+</div>
         </div>
     </main>
