--- a/views/ejercicios.html
+++ b/views/ejercicios.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
       <link rel="stylesheet" href="/css/ejercicios.css" type="text/css">
       <link rel="stylesheet" href="/css/ejercicios-cont.css" type="text/css">
+
       <!--Tipografías--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,26 +78,58 @@
       <!--Código ejercicios-->
       <h2 style="margin-top: 100px;">Mis ejercicios</h2>
 
-      <div class="ejercicios-top-contenedor">
-      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503364/Por%20Ti/ejercicios-card4_vfqu0z.svg); width:373px;"><div class="card-ejercicio-text"><h2>Imaginación guiada</h2><h6>12 min</h6>
-    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
-      
-    <div class="box"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
+      <div class="ejercicios-box-cont" style="margin-top: 50px; padding-left: 75px;">
+
+    <div class="box"><div class="card-ejercicio-text">
+      <h2>Tapping</h2><h6>12 min</h6>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
       
-        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width:373px;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg);"><div class="card-ejercicio-text">
+          <h2>Arteterapia</h2><h6>12 min</h6>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+      
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019618/Por%20Ti/Imaginacio%CC%81n_guiadaejercicios_oe6tbo.png); width:373px;"><div class="card-ejercicio-text">
+          <h2>Imaginación guiada</h2><h6>12 min</h6>
+          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+          
+          <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019619/Por%20Ti/Plato_del_buen_comerejercicios_bkege6.png);"><div class="card-ejercicio-text">
+            <h2>Plato del buen comer</h2><h6>12 min</h6>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+    
+            <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019619/Por%20Ti/Relajacio%CC%81n_musculaejercicios_gvsvcs.png);"><div class="card-ejercicio-text">
+              <h2>Relajación muscular</h2><h6>12 min</h6>
+              <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+
+      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189738/Por%20Ti/sueno-card_hpgpud.svg);"><div class="card-ejercicio-text"><h2>Registro de sueño</h2><h6>12 min</h6>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+        
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/actividades-del-dia-card_jk8qu2.svg);"><div class="card-ejercicio-text"><h2>Listado de actividades del día</h2><h6>12 min</h6>
+          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+  
+          <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/diario-emocional-card_ilqhnt.svg);"><div class="card-ejercicio-text"><h2>Diario emocional</h2><h6>12 min</h6>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+
+            <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/registro-ansiedad-card_bpsazv.svg);"><div class="card-ejercicio-text"><h2>Hoja de registro de ansiedad</h2><h6>12 min</h6>
+              <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+            </div>
     </div>
+  </div>
 </div>
 
   <h2 style="margin-top: 100px;">Actividades cortas</h2>
 
-  <div class="mis-ejercicios-contenedor">
-    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 50%;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
+  <div class="ejercicios-box-cont" style="margin-top: 50px; padding-left: 75px;">
+    
+    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/sentidos-card_fjbkx6.svg); width:373px;"><div class="card-ejercicio-text">
+      <h2>Técnica de los 5 sentidos</h2><h6>12 min</h6>
+  <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
     <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503371/Por%20Ti/ejercicios-card7_qguw8x.svg);"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div>
     </div>
+    
+</div>
 </div>
 </div>
 
@@ -123,3 +156,4 @@
 </div>
         </div>
     </main>
+</html>
