--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -132,6 +132,7 @@ background-color: rgb(254, 223, 200);
 color: rgb(65, 64, 105);
 text-align: center;
 margin: 0 auto;
+margin-top: 15px;
 }
 
 button:hover{
@@ -405,6 +406,7 @@ h2 {
 }
 
 p {
+  color: white;
  padding: 20px 80px;
 }
 
@@ -413,7 +415,9 @@ p {
   color: red;
   text-align: center;
   margin:auto;
-  padding: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 15px 0;
 }
 
 input[type=checkbox]{
