--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -29,32 +29,32 @@
 
   <div class="main">
     <br>
-          <form action="/login" method="GET" class="main">
+          <form action="/users/login" method="POST" class="main">
             <!--Prueba-->
             <div class="login-box">
                 <h2>¿Listo para hacer algo por ti hoy?<h6 class="body-text">Ingresar</h6></h2>
                 <form>
                   <div class="user-box">
                     <input type="text" name="email" required="" id="email">
-                    <label for="email">Correo electrónico</label>
+                    <label for="email">Correo electrónico <% if(locals.errors && errors.email) { %>
+                      <div class="alert">
+                          <i class="fas fa-times-circle"></i>
+                          <%= errors.email.msg %>
+                      </div>
+                      <% } %></label>
                   </div>
-                  <% if(locals.errors && errors.email) { %>
-                    <div class="alert">
-                        <i class="fas fa-times-circle"></i>
-                        <%=errors.email.msg%>
-                    </div>
-                    <%}%>
+                 
                   <div class="user-box">
                     <input type="password" name="password" required="" id="password">
-                    <label for="password">Contraseña</label>
+                    <label for="password">Contraseña <% if(locals.errors && errors.password){ %>
+                      <div class="alert">
+                          <i class="fas fa-times-circle"></i>
+                          <%=errors.password.msg%>
+                      </div>
+                      <% } %></label>
                   </div>
-                  <% if(locals.errors && errors.password){ %>
-                    <div class="alert">
-                        <i class="fas fa-times-circle"></i>
-                        <%=errors.password.msg%>
-                    </div>
-                    <%}%>
-                <button type="submit" href="/users/miperfil" style="text-align:center; left: 30%; right: 30%; position: absolute">Iniciar sesión</button>
+        
+                <button type="submit" style="text-align:center; left: 30%; right: 30%; position: absolute">Iniciar sesión</button>
                 <br>
                 <br>
                 <br>
