--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -74,8 +74,8 @@
                     </div>
                 <%}%>
                   <div class="user-box">
-                    <input type="password" name="confirm_password" required="" id="confirm_password"/>
-                    <label for="confirm_password">Confirmar contraseña</label>
+                    <input type="password" name="password" required="" id="confirm_password"/>
+                    <label for="password">Confirmar contraseña</label>
                   </div>
          <button type="submit" style="text-align:center; left: 30%; right: 30%; position: absolute">Registrarme</button> 
                 <br>
