--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -58,7 +58,7 @@
                 <br>
                 <br>
                 <br>
-                <div style="display: flex; flex-direction: row; align-items: baseline;"><input type="checkbox"></input><h6>Recordar mi usuario</h6></div>
+                <div style="display: flex; flex-direction: row; align-items: baseline;"><input type="checkbox"></input><p class="p" style="margin-left: 15px; padding-left: 0;">Recordar mi usuario</></div>
                 <p class="p">¿Aún no tienes una cuenta?  </p>
                   <a href="/users/registro" style="text-align:center; left: 40%; right: 40%; position: absolute">Registrate aquí</a>
             <!--[if mso]>&nbsp;<![endif]-->
