--- a/src/public/css/ejercicios.css
+++ b/src/public/css/ejercicios.css
@@ -208,3 +208,8 @@ button{
       position: relative;
       z-index: 13030;
   }
+
+  .h4-card-text{
+      position: relative;
+      width: 60%;
+  }
