--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -3,12 +3,22 @@
     <a href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu"></img></a>
     <nav id="primary_nav_wrap">
         <ul>
-          <li class="current-menu-item"><a href="/misobjetivos">Contacto</a></li>
-          <li><a href="/users/login">Iniciar sesión</a>
-                  <li><a href="/users/registro">Registrate</a></li>
-                </ul>
+          <% if(locals.isLogged) { %>
+            <li><a href="/listado">Contacto</a></li>
+            <li class="current-menu-item"><a href="/misejercicios">Mis ejercicios</a></li>
+            <li><a href="/users/miperfil">¡Hola <b><%= locals.userLogged.name %></b>!</a>
+                  </ul>
+                </li>
+            </li>
+          </ul>
+            <% } else { %>
+              <li class="current-menu-item"><a href="/misobjetivos">Contacto</a></li>
+              <li><a href="/users/login">Iniciar sesión</a>
+                      <li><a href="/users/registro">Registrate</a></li>
+                    </ul>
+                  </li>
               </li>
-          </li>
-        </ul>
+            </ul>
+              <% } %>
         </nav>
     </div>
