--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -29,7 +29,7 @@
     <main>
 <div class="datos-perfil">
 <h3>¡Hola!</h3>
-<h1>Nombre Apellido</h1>
+<h1> <%= user.name %> <%= user.last_name %></h1>
 </div>
 <main style="padding-top: 25px;">
 <div class="espacio" style="padding: 25px"></div>
@@ -61,13 +61,13 @@
 <div class="espacio" style="padding: 25px"></div>
 <div class="ejercicios-top-contenedor">
     <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503364/Por%20Ti/ejercicios-card4_vfqu0z.svg); width:373px;"><div class="card-ejercicio-text"><h2>Imaginación guiada</h2><h6>12 min</h6>
-  <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+  <h4>Lorem ipsum dolor sit amet consectetur adipiscing</h4></div></div>
     
   <div class="box"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
-      <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+      <h4>Lorem ipsum dolor sit amet consectetur </h4></div></div>
     
       <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width:373px;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
-      <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam repellendus eveniet adipisci voluptatum iste a</h4></div></div>
+      <h4>Lorem ipsum dolor sit amet consecteturdipisci</h4></div></div>
   </div>
   <div class="espacio" style="padding: 25px"></div>
   <div class="espacio" style="padding: 25px"></div>
@@ -102,7 +102,9 @@
               </ul>
           </div>
         </div>
+        <div class="a-session"><a href="/users/logout">Cerrar sesión</a></div>
       </div>
+      
 </body>
 </main>
 </html>
