--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio
+    </title>
+      <!--CSS--> 
+      <link rel="stylesheet" href="/css/home.css" type="text/css">
+      <link rel="stylesheet" href="/css/navbar.css" type="text/css">
+      <link rel="stylesheet" href="/css/fondo.css" type="text/css">
+  
+      <!--Tipografías--> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       <!--Poppins--> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <!--Nunito--> 
+     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+      <!--Kit FontAwesome--> 
+     <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
+    </head>
 
-<%- include('./partials/head') %>
-
-<%- include('./partials/nav') %>
+     <!--Menu-->
+ <div class="nav-gradient">
+  <a href="/"><img src="/img/Logo_Horizontal.png" id="logo-menu"></img></a>
+  <nav id="primary_nav_wrap">
+      <ul>
+        <% if(locals.isLogged) { %>
+          <li><a href="/listado">Contacto</a></li>
+          <li class="current-menu-item"><a href="/misejercicios">Mis ejercicios</a></li>
+          <li><a href="/users/miperfil">¡Hola <b><%= locals.userLogged.name %></b>!</a>
+                </ul>
+              </li>
+          </li>
+        </ul>
+          <% } else { %>
+            <li class="current-menu-item"><a href="/misobjetivos">Contacto</a></li>
+            <li><a href="/users/login">Iniciar sesión</a>
+                    <li><a href="/users/registro">Registrate</a></li>
+                  </ul>
+                </li>
+            </li>
+          </ul>
+            <% } %>
+      </nav>
+  </div>
 
 <body>
         <!--Banner--> 
